--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ services:
   - docker
 
 before_install:
-  - echo "start creating an image with dockerfile"
+  - echo "start Creating an image with dockerfile"
   - docker build -t ynsoo1225/docker-react-app -f Dockerfile.dev .
 
 script: 
   - docker run -e CI=true ynsoo1225/docker-react-app npm run test -- --coverage
 
-after success:
+after_success:
   - echo "Test Success"
